# lisp-attempt-1

./: .gitignore  CMakeLists.txt  README.md  build.zig  flake.nix  in.txt  sample.txt  spec.md
la1/: main.c
la1/common/: alloc.c  alloc.h  die.c  die.h  list.c  list.h
la1/execution/: binding.c  binding.h  builtin.c  builtin.h  execution.c  execution.h  gc.c  gc.h  realize.c  special_forms.c  special_forms.h  value.c  value.h
la1/parsing/: lexer.c  lexer.h  parse_value.c  parse_value.h  parser.c  parser.h
src/: c.zig  content.zig
src/common/: alloc.c  alloc.h  die.c  die.h  list.c  list.h
src/execution/: binding.c  binding.h  builtin.c  builtin.h  data_stack.h  data_stack.zig  execution.c  execution.h  gc.c  gc.h  gc.zig  realize.c  realize.h  special_forms.c  special_forms.h  state.h  value.c  value.h
src/parsing/: lexer.c  lexer.h  parse_value.c  parse_value.h  parser.c  parser.h
